# snakes

./: LICENSE  README.md  snakes.cabal
app/: Main.hs
bench/: Main.hs
src/Data/: Snakes.hs
src/Data/Snakes/: DiffLike.hs  Internal.hs
test/: Spec.hs
