name:                snakes
version:             0.0.0.0
synopsis:            Yet another O(ND) diff algorithm implementation in Haskell
description:         Please see README.md
homepage:            https://github.com/schernichkin/snakes#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           2015 Stanislav Chernichkin
category:            Algorithms
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Snakes
                     , Data.Snakes.DiffLike
                     , Data.Snakes.Internal
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable snakes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , snakes
  default-language:    Haskell2010

test-suite snakes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , HUnit
                     , QuickCheck
                     , snakes
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -t -M2G"
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/snakes
